[package]
name = "kotowari"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Kotowari (理) — LSP client, diagnostics UI, and code intelligence for Neovim"
homepage = "https://github.com/pleme-io/kotowari"
repository = "https://github.com/pleme-io/kotowari"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "lsp", "diagnostics", "code-action"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.5", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
waku = { path = "../waku", version = "0.1.0" }
